Updated EventLogReader to reference simiaslib.dll.
git-svn-id: svn://svn.code.sf.net/p/simias/code/trunk@6453 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/simias/tools/EventLogReader/EventLogReader.csproj
+++ b/simias/tools/EventLogReader/EventLogReader.csproj
@@ -90,14 +90,14 @@
                     HintPath = "..\..\WINDOWS\Microsoft.NET\Framework\v1.1.4322\System.XML.dll"
                 />
                 <Reference
-                    Name = "SimiasClient"
-                    AssemblyName = "SimiasClient"
-                    HintPath = "..\..\stage\web\bin\SimiasClient.dll"
+                    Name = "SimiasLib"
+                    AssemblyName = "SimiasLib"
+                    HintPath = "..\..\src\core\SimiasLib.dll\SimiasLib.dll"
                 />
                 <Reference
-                    Name = "Simias"
-                    AssemblyName = "Simias"
-                    HintPath = "..\..\stage\web\bin\SimiasLib.dll"
+                    Name = "SimiasClient"
+                    AssemblyName = "SimiasClient"
+                    HintPath = "..\..\src\core\SimiasClient\SimiasClient.dll"
                 />
             </References>
         </Build>
