--- a/simias/src/server/Simias.Server/Simias.Server.csproj
+++ b/simias/src/server/Simias.Server/Simias.Server.csproj
@@ -204,6 +204,10 @@
                     BuildAction = "Compile"
                 />
                 <File
+                    RelPath = "Report.resx"
+                    BuildAction = "EmbeddedResource"
+                />
+                <File
                     RelPath = "Service.cs"
                     SubType = "Code"
                     BuildAction = "Compile"
