Added client update to the server.
git-svn-id: svn://svn.code.sf.net/p/simias/code/trunk@6471 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/simias/configure.in
+++ b/simias/configure.in
@@ -647,6 +647,8 @@ src/server/Simias.Server/Makefile
 src/server/Simias.LdapProvider/Makefile
 src/server/Simias.ADLdapProvider/Makefile
 src/server/Simias.OpenLdapProvider/Makefile
+src/server/Simias.ClientUpdate/Makefile
+src/server/Simias.ClientUpdate/AssemblyInfo.cs
 src/client/Makefile
 src/client/simias
 src/client/SimiasDirectoryMapping
