Added handler to Simias.Server to get reports and log files in chunks.
git-svn-id: svn://svn.code.sf.net/p/simias/code/trunk@6474 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/simias/src/core/SimiasClient/SimiasSetup.cs.in
+++ b/simias/src/core/SimiasClient/SimiasSetup.cs.in
@@ -52,6 +52,7 @@ namespace Simias.Client
 		private static string _modulesdir = "@modulesdir@";
 		private static string _bootstrapdir = "@bootstrapdir@";
 		private static string _simiasconfdir = "@simiasconfdir@";
+		private static string _simiaslogdir = "@simiaslogdir@";
 		
 		// setup info
 		private static string _target = "@target@";
@@ -127,6 +128,7 @@ namespace Simias.Client
 				_modulesdir = Path.GetFullPath(_modulesdir.Replace(_prefix, value));
 				_bootstrapdir = Path.GetFullPath(_bootstrapdir.Replace(_prefix, value));
 				_simiasconfdir = Path.GetFullPath(_simiasconfdir.Replace(_prefix, value));
+				_simiaslogdir = Path.GetFullPath(_simiaslogdir.Replace(_prefix, value));
 				
 				// update prefix
 				_prefix = Path.GetFullPath(value);
@@ -260,6 +262,14 @@ namespace Simias.Client
 		public static string simiasconfdir
 		{
 			get { return _simiasconfdir; }
+		}
+		
+		/// <summary>
+		/// simiaslogdir
+		/// </summary>
+		public static string simiaslogdir
+		{
+			get { return _simiaslogdir; }
 		}
 		
 		/// <summary>
