--- a/simias/src/core/WebService/win.web.config
+++ b/simias/src/core/WebService/win.web.config
@@ -34,6 +34,11 @@
 			<add name="ErrorHandlerModule" type="System.Web.Mobile.ErrorHandlerModule, System.Web.Mobile, Version=1.0.5000.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a"/>
 			<add name="AuthenticationModule" type="Simias.Security.Web.AuthenticationModule, SimiasLib"/>
 		</httpModules>
+
+		<httpHandlers>
+			<add verb="*" path="admindata/*.log" type="Simias.Server.ReportLogHandler,Simias.Server"/>
+			<add verb="*" path="admindata/*.csv" type="Simias.Server.ReportLogHandler,Simias.Server"/>
+		</httpHandlers>
     </system.web>
 
 <!--
