Implemented the report/log handler code.
git-svn-id: svn://svn.code.sf.net/p/simias/code/trunk@6480 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/simias/src/admin/Admin.csproj
+++ b/simias/src/admin/Admin.csproj
@@ -475,6 +475,15 @@
                     BuildAction = "EmbeddedResource"
                 />
                 <File
+                    RelPath = "ReportLogHandler.ashx"
+                    BuildAction = "None"
+                />
+                <File
+                    RelPath = "ReportLogHandler.ashx.cs"
+                    SubType = "Code"
+                    BuildAction = "Compile"
+                />
+                <File
                     RelPath = "Reports.aspx"
                     SubType = "Form"
                     BuildAction = "Content"
