--- a/simias/src/admin/Web.config
+++ b/simias/src/admin/Web.config
@@ -85,17 +85,22 @@
           To disable cookies, set sessionState cookieless="true".
     -->
     <sessionState 
-            mode="InProc"
-            cookieless="false" 
-            timeout="20" 
+        mode="InProc"
+        cookieless="false" 
+        timeout="20" 
     />
+    
+    <httpHandlers>
+		<add verb="*" path="*.log" type="Novell.iFolderWeb.Admin.ReportLogHandler,Novell.iFolderAdmin"/>
+		<add verb="*" path="*.csv" type="Novell.iFolderWeb.Admin.ReportLogHandler,Novell.iFolderAdmin"/>
+	</httpHandlers>
 
     <!--  GLOBALIZATION
           This section sets the globalization settings of the application. 
     -->
     <globalization 
-            requestEncoding="utf-8" 
-            responseEncoding="utf-8" 
+        requestEncoding="utf-8" 
+        responseEncoding="utf-8" 
    />
    
  </system.web>
