added Simias.HostService to the project
git-svn-id: svn://svn.code.sf.net/p/simias/code/trunk@6485 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/simias/configure.in
+++ b/simias/configure.in
@@ -644,6 +644,7 @@ src/server/setup/Makefile
 src/server/Simias.HttpFile/Makefile
 src/server/Simias.Rss/Makefile
 src/server/Simias.Server/Makefile
+src/server/Simias.HostService/Makefile
 src/server/Simias.LdapProvider/Makefile
 src/server/Simias.ADLdapProvider/Makefile
 src/server/Simias.OpenLdapProvider/Makefile
