Allow .log and .csv extensions to be handled by admin.
git-svn-id: svn://svn.code.sf.net/p/simias/code/trunk@6497 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/simias/src/setup/apache/default/ifolder_admin.conf.in
+++ b/simias/src/setup/apache/default/ifolder_admin.conf.in
@@ -6,7 +6,7 @@ AddMonoApplications admin "/admin:@admindir@"
 	MonoSetServerAlias admin
 	Order allow,deny
 	Allow from all
-	AddHandler mono asax aspx ascx asmx ashx
+	AddHandler mono asax aspx ascx asmx ashx log csv
 	DirectoryIndex Default.aspx index.html
 </Location>
 
