added catalog services to the server solution
git-svn-id: svn://svn.code.sf.net/p/simias/code/trunk@6499 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/simias/src/server/Simias.ClientUpdate/ClientUpdate.csproj
+++ b/simias/src/server/Simias.ClientUpdate/ClientUpdate.csproj
@@ -90,14 +90,14 @@
                     HintPath = "..\..\..\..\..\WINDOWS\Microsoft.NET\Framework\v1.1.4322\System.Web.Services.dll"
                 />
                 <Reference
-                    Name = "SimiasClient"
-                    AssemblyName = "SimiasClient"
-                    HintPath = "..\..\..\..\stage\web\bin\SimiasClient.dll"
-                />
-                <Reference
                     Name = "SimiasLib"
                     AssemblyName = "SimiasLib"
-                    HintPath = "..\..\..\..\stage\web\bin\SimiasLib.dll"
+                    HintPath = "..\..\core\SimiasLib.dll\SimiasLib.dll"
+                />
+                <Reference
+                    Name = "SimiasClient"
+                    AssemblyName = "SimiasClient"
+                    HintPath = "..\..\core\SimiasClient\SimiasClient.dll"
                 />
             </References>
         </Build>
