--- a/simias/src/server/setup/simias-server-setup.in
+++ b/simias/src/server/setup/simias-server-setup.in
@@ -9,10 +9,10 @@
 #
 #######################################################################
 
-export MONO_PATH=@webbindir@:@bindir@
-export LD_LIBRARY_PATH=$LD_LIBRARY_PATH:@webbindir@
-export DYLD_LIBRARY_PATH=$DYLD_LIBRARY_PATH:@webbindir@
-cd @bindir@
+export MONO_PATH=@_webbindir_@:@_bindir_@
+export LD_LIBRARY_PATH=$LD_LIBRARY_PATH:@_webbindir_@
+export DYLD_LIBRARY_PATH=$DYLD_LIBRARY_PATH:@_webbindir_@
+cd @_bindir_@
 
 mono @bindir@/SimiasServerSetup.exe "$@"
 
