Added a handler to be able to tail log files.
git-svn-id: svn://svn.code.sf.net/p/simias/code/trunk@6506 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/simias/src/admin/Admin.csproj
+++ b/simias/src/admin/Admin.csproj
@@ -411,6 +411,15 @@
                     BuildAction = "EmbeddedResource"
                 />
                 <File
+                    RelPath = "LogTailHandler.ashx"
+                    BuildAction = "None"
+                />
+                <File
+                    RelPath = "LogTailHandler.ashx.cs"
+                    SubType = "Code"
+                    BuildAction = "Compile"
+                />
+                <File
                     RelPath = "MemberSearch.ascx"
                     SubType = "UserControl"
                     BuildAction = "Content"
