--- a/simias/src/admin/Web.config
+++ b/simias/src/admin/Web.config
@@ -91,6 +91,7 @@
     />
     
     <httpHandlers>
+		<add verb="*" path="tail/*.log" type="Novell.iFolderWeb.Admin.LogTailHandler,Novell.iFolderAdmin"/>
 		<add verb="*" path="*.log" type="Novell.iFolderWeb.Admin.ReportLogHandler,Novell.iFolderAdmin"/>
 		<add verb="*" path="*.csv" type="Novell.iFolderWeb.Admin.ReportLogHandler,Novell.iFolderAdmin"/>
 	</httpHandlers>
