fixed up simiasserver.in so it replaces to target
git-svn-id: svn://svn.code.sf.net/p/simias/code/trunk@6509 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/simias/src/server/Makefile.am
+++ b/simias/src/server/Makefile.am
@@ -13,7 +13,13 @@ DOC_FILE_CMD = /doc:$(DOC_FILE)
 DOC_FILE_CLEAN = *.doc.xml
 endif
 
-all:
+simiasserver: $(srcdir)/simiasserver.in
+if !WINDOWS
+	sed -e 's,@_webbindir_@,@webbindir@,g' -e 's,@_bindir_@,@bindir@,g' $< > $@
+	chmod +x $@
+endif		
+
+all: simiasserver
 
 install-exec-local: all
 	$(mkinstalldirs) $(DESTDIR)$(webbindir) $(DESTDIR)$(bootstrapdir) $(DESTDIR)$(bootstrapdir)/modules
