--- a/simias/src/server/setup/simias-server-setup.in
+++ b/simias/src/server/setup/simias-server-setup.in
@@ -14,5 +14,5 @@ export LD_LIBRARY_PATH=$LD_LIBRARY_PATH:@_webbindir_@
 export DYLD_LIBRARY_PATH=$DYLD_LIBRARY_PATH:@_webbindir_@
 cd @_bindir_@
 
-mono @bindir@/SimiasServerSetup.exe "$@"
+mono @_bindir_@/SimiasServerSetup.exe "$@"
 
